dependency update, junit 5, pom cleanup